refactor all examples